# ephraim-designs

./: .gitignore  404.html  README.md  index.html  pyproject.toml  sitemap.xml
about/: index.html
about-ephraim-designs/: Action Plan.md  Combined - Compressed.md  Ephraim Designs - Action Plan.md  Ephraim Designs - Portfolio.md  Ephraim Designs - Product Definition.md  Ephraim Designs As A Product.md  Jason Rakich - 20241127.md  Jason Rakich - Art Portfolio (Facebook) - 20241127.md  Last Session.md  MidJourney-Flair.md  Session Wrap-Up.md  The Plan.md
about-ephraim-designs/archive/: Ephraim Designs As A Product.md
about-ephraim-designs/test/: Ephraim Designs - Development Plan - 20241127.md
contact/: index.html
ephraim-designs/: mkdocs.yml
ephraim-designs/docs/: about.md  contact.md  index.md  mkdocs_github_authors.yaml  services.md
ephraim-designs/docs/portfolio/: index.md  live-art.md  murals.md  other.md  paintings.md
ephraim-designs/docs/stylesheets/: extra.css
ephraim-designs/site/search/: search_index.json
ephraim-designs/stylesheets/: extra.css
portfolio/: index.html
portfolio/live-art/: index.html
portfolio/murals/: index.html
portfolio/other/: index.html
portfolio/paintings/: index.html
search/: search_index.json
services/: index.html
stylesheets/: extra.css
testimonials/: index.html
